fixes layout bug in liz and eric page

--- a/stylesheets/overrides.css
+++ b/stylesheets/overrides.css
@@ -21,6 +21,10 @@ a, a:hover {
   background-color: #F36F21;
 }
 
+#liz_and_eric_text h2 {
+  padding-left: 29px;
+}
+
 .menu-btn {
   display: none;
 }
@@ -41,6 +45,11 @@ a, a:hover {
 }
 
 /* Responsive Overrides */
+@media (max-width: 1200px) {
+  #liz_and_eric_text h2 {
+    padding-left: 20px;
+  }
+}
 @media (max-width: 940px) {
   #main {
     margin-bottom: 0px;
@@ -244,6 +253,12 @@ a, a:hover {
   }
   .content + .content {
     padding-top: 0;
+  }
+  #liz_and_eric_text:first-of-type .content {
+    padding-bottom: 0px;
+  }
+  #liz_and_eric_text h2 {
+    padding-left: 0px;
   }
 
   /* Contact Us */
